--- a/index.html
+++ b/index.html
@@ -560,6 +560,10 @@ Here are some notes.
 <h2>Slide with Plot</h2>
 <p><img src="index_files/figure-revealjs/pressure-1.png" width="768" /></p>
 </section>
+<section id="mathjax" class="slide level2">
+<h2>MathJax</h2>
+<p><span class="math display">\[(X&#39;X)^{-1} X&#39;y\]</span></p>
+</section>
     </div>
   </div>
 
@@ -599,7 +603,7 @@ Here are some notes.
 
         chalkboard: {
           toggleNotesButton: true,
-          theme: 'chalkboard',
+          theme: 'zenburn',
         },
 
         keyboard: {
@@ -613,7 +617,6 @@ Here are some notes.
         // Optional reveal.js plugins
         dependencies: [
           { src: 'index_files/reveal.js-3.3.0.1/plugin/notes/notes.js', async: true },
-          { src: 'index_files/reveal.js-3.3.0.1/plugin/zoom-js/zoom.js', async: true },
           { src: 'index_files/reveal.js-3.3.0.1/plugin/chalkboard/chalkboard.js', async: true },
           { src: 'index_files/reveal.js-3.3.0.1/plugin/menu/menu.js', async: true },
         ]
